--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</header>
-	
+	<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt" width="auto" height="auto">
 	<h2>Welcome!</h2>
 	<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 	
 	<h2>Portfolio</h2>
     
-    <img src="">
+    <img src="images/portfolio-1.png" alt="Person with short hair in yellow shirt">
     <h3>Marketing Page</h3>
 	<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
     
-    <img src="">
+    <img src="images/portfolio-2.png">
     <h3>Search Page</h3>
 	<p>This project searches through a specific database to find information that the user is tring to look up.</p>
 
-    <img src="">
+    <img src="images/portfolio-3.png">
     <h3>Travel App</h3>
 	<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
 
-    <img src="">
+    <img src="images/portfolio-4.png">
     <h3>Map of Favorite Spots</h3>
 	<p>This Project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
 
-    <img src="">
+    <img src="images/portfolio-5.png">
     <h3>Photo Gallery</h3>
 	<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
 
-    <img src="">
+    <img src="images/portfolio-6.png">
     <h3>Calculator</h3>
 	<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
 
