--- a/index.html
+++ b/index.html
@@ -10,62 +10,73 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800;&display=swap" rel="stylesheet">
 </head>
 <body>
-
-	<header class="main-header">
-		<div class="container">
-			<h1 class="name"><a href="#">Student Name</a></h1>
-			<ul class="main-nav">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
-	</header>
-	
-	<div class="container">
-		<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt" width="auto" height="auto">
-		<h2>Welcome!</h2>
-		<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+<div class="wrap"></div>
+		<header class="main-header">
+			<div class="container">
+				<h1 class="name"><a href="#">Student Name</a></h1>
+				<ul class="main-nav">
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</header>
 		
-		<div class= "project">
-			<h2>Portfolio</h2>
-				<img src ="images/portfolio-1.png" alt="illustration of website on the web">
+		<div class="container">
+			<section id="intro">
+				<div id="profile">
+					<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt" width="auto" height="auto">
+				</div>
+				<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+			</section>
 
-			<h3>Marketing Page</h3>
-				<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-				<img src="images/portfolio-2.png">
+				<div class= "project">
+					<h2>Portfolio</h2>
+				<section>	
+					<img src ="images/portfolio-1.png" alt="illustration of website on the web">
+					<h3>Marketing Page</h3>
+					<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+				</section>	
+				
+				<section>
+					<img src="images/portfolio-2.png">
+					<h3>Search Page</h3>
+					<p>This project searches through a specific database to find information that the user is tring to look up.</p>
+				</section>
 
+				<section>
+					<img src="images/portfolio-3.png">
+					<h3>Travel App</h3>
+					<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+				</section>
+				<section>
+					<img src="images/portfolio-4.png">
+					<h3>Map of Favorite Spots</h3>
+					<p>This Project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+				</section>
+				<section>
+					<img src="images/portfolio-5.png">
+					<h3>Photo Gallery</h3>
+					<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+				</section>
+				<section>
+					<img src="images/portfolio-6.png">
+					<h3>Calculator</h3>
+					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+				</section>	
+		</div>
 
-			<h3>Search Page</h3>
-				<p>This project searches through a specific database to find information that the user is tring to look up.</p>
-
-				<img src="images/portfolio-3.png">
-			<h3>Travel App</h3>
-				<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-
-				<img src="images/portfolio-4.png">
-			<h3>Map of Favorite Spots</h3>
-				<p>This Project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-
-				<img src="images/portfolio-5.png">
-			<h3>Photo Gallery</h3>
-				<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-
-				<img src="images/portfolio-6.png">
-			<h3>Calculator</h3>
-				<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-	</div>
-	<div>
-		<h2>Contact</h2>
-		<p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
-		<p>Phone +1 (111) 555-1234</p>
-		<p>Email email@yoursite.com</p>
+		<section>
+			<h2>Contact</h2>
+			<p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
+			<p>Phone +1 (111) 555-1234</p>
+			<p>Email email@yoursite.com</p>
+		</section>
 	</div>
 
 	<footer class="main-footer">
-		<div class="container">
-			<p>&copy;2015 Residents of The Best City Ever.</p>
-		</div>
+			<p>Student Name</p>
+			<p>Back to the Top</p>
 	</footer>
 </body>
 </html>
