--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<div id="profile">
 					<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt" width="auto" height="auto">
 				</div>
+				<p>TestParagraph goes here</p>
 				<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 			</section>
 
