--- a/index.html
+++ b/index.html
@@ -1,83 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Student Portfolio</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800;&display=swap" rel="stylesheet">
-</head>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Student Portfolio</title>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800;&display=swap" rel="stylesheet">
+	</head>
 <body>
+	<!-- Navigation -->
 	<section id="intro">
 		<header class="main-header">
 			<div class="container">
 				<h1 class="name"><a href="#">Student Name</a></h1>
-				<ul class="main-nav">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
+					<ul class="main-nav">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
 			</div>
 		</header>
-		
+			
+		<!-- Main -->
 		<div class="container">
-
-				<div id="profile">
-					<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt" width="auto" height="auto">
-				</div>
-				<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+			<div id="profile">
+				<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt" width="auto" height="auto">
+			</div>
+			<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+		</div>
 	</section>
 
 				<div class= "project">
 					<h2>Portfolio</h2>
-				<section>	
-					<img src ="images/portfolio-1.png" alt="illustration of website on the web">
-					<h3>Marketing Page</h3>
-					<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-				</section>	
-				
-				<section>
-					<img src="images/portfolio-2.png">
-					<h3>Search Page</h3>
-					<p>This project searches through a specific database to find information that the user is tring to look up.</p>
-				</section>
+					<section>	
+						<img src ="images/portfolio-1.png" alt="illustration of website on the web">
+						<h3>Marketing Page</h3>
+						<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+					</section>	
+					
+					<section>
+						<img src="images/portfolio-2.png">
+						<h3>Search Page</h3>
+						<p>This project searches through a specific database to find information that the user is tring to look up.</p>
+					</section>
 
-				<section>
-					<img src="images/portfolio-3.png">
-					<h3>Travel App</h3>
-					<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-				</section>
-				<section>
-					<img src="images/portfolio-4.png">
-					<h3>Map of Favorite Spots</h3>
-					<p>This Project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-				</section>
-				<section>
-					<img src="images/portfolio-5.png">
-					<h3>Photo Gallery</h3>
-					<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-				</section>
-				<section>
-					<img src="images/portfolio-6.png">
-					<h3>Calculator</h3>
-					<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-				</section>	
-			</div>
+					<section>
+						<img src="images/portfolio-3.png">
+						<h3>Travel App</h3>
+						<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+					</section>
+					<section>
+						<img src="images/portfolio-4.png">
+						<h3>Map of Favorite Spots</h3>
+						<p>This Project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+					</section>
+					<section>
+						<img src="images/portfolio-5.png">
+						<h3>Photo Gallery</h3>
+						<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+					</section>
+					<section>
+						<img src="images/portfolio-6.png">
+						<h3>Calculator</h3>
+						<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+					</section>	
+				</div>
 		</div>
 
 		<section id="intro">
 			<h2>Contact</h2>
 			<p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
-			<p>Phone +1 (111) 555-1234</p>
-			<p>Email email@yoursite.com</p>
+			<p>Phone &#160; <b>+1 (111) 555-1234</b></p>
+			<p>Email &#160; <b>email@yoursite.com</b></p>
 
-	<footer class="main-footer">
-			<p>Student Name</p>
-			<p>Back to the Top</p>
-	</footer>
-</section>
+			<hr>
+
+			<footer class="main-footer">
+					<p class="align-left">Student Name</p>
+					<p class="align-right">Back to the Top</p>
+			</footer>
+		</section>
 
 </body>
 </html>
