--- a/index.html
+++ b/index.html
@@ -33,41 +33,45 @@
 				<p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 			</div>
 		</section>
+		<section>
 					<div class= "project">
 						<h2>Portfolio</h2>
-						<div>	
+					</div>
+					<div class="project-2">
+						<div class="img-cap">	
 							<img src ="images/portfolio-1.png" alt="Illustation of a mock-up web layout.">
 							<h3>Marketing Page</h3>
 							<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
 						</div>	
 						
-						<div>
+						<div class="img-cap">
 							<img src="images/portfolio-2.png" alt="mock-up of browser search bar">
 							<h3>Search Page</h3>
 							<p>This project searches through a specific database to find information that the user is tring to look up.</p>
 						</div>
 
-						<div>
+						<div class="img-cap">
 							<img src="images/portfolio-3.png" alt="illustated log-in area of web browser">
 							<h3>Travel App</h3>
 							<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
 						</div>
-						<div>
+						<div class="img-cap">
 							<img src="images/portfolio-4.png" alt="illustated map in browser window">
 							<h3>Map of Favorite Spots</h3>
 							<p>This Project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
 						</div>
-						<div>
+						<div class="img-cap">
 							<img src="images/portfolio-5.png" alt="illustration of photo gallery in browser window">
 							<h3>Photo Gallery</h3>
 							<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
 						</div>
-						<div>
+						<div class="img-cap">
 							<img src="images/portfolio-6.png" alt="illustration of calculator in browser window">
 							<h3>Calculator</h3>
 							<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-						</div>	
+						</div>
 					</div>
+			</section>
 
 			<section id="contact-2">
 				<h2>Contact</h2>
