--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8"/>
 		<title>Student Portfolio</title>
@@ -16,16 +15,13 @@
 	<div class="content">
 		<section id="intro">
 			<header class="main-header">
-					<h1 class="site-logo"><a href="#">Student Name</a></h1>
-						<ul class="main-nav">
-							<li><a href="#">Home</a></li>
-							<li><a href="#">Portfolio</a></li>
-							<li><a href="#">Contact</a></li>
+					<h1 class="site-logo"> <a id="home"> <a id="top">Student Name</a></a></h1>
+					<ul class="main-nav">
+							<li><a href="#home">Home</a></li>
+							<li><a href="#portfolio">Portfolio</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
-
 			</header>
-				
-			<!-- Main -->
 			<div class="container">
 				<div id="profile">
 					<img src="images/responsive-layout-profile.png" alt="Person with short hair in yellow shirt">
@@ -34,16 +30,15 @@
 			</div>
 		</section>
 		<section>
-					<div class= "project">
-						<h2>Portfolio</h2>
+				<div class= "project">
+				<h2> <a id="portfolio">Portfolio</a></h2>
 					</div>
 					<div class="project-2">
 						<div class="img-cap">	
-							<img src ="images/portfolio-1.png" alt="Illustation of a mock-up web layout.">
+							<img src="images/portfolio-1.png" alt="Illustation of a mock-up web layout.">
 							<h3>Marketing Page</h3>
 							<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
 						</div>	
-						
 						<div class="img-cap">
 							<img src="images/portfolio-2.png" alt="mock-up of browser search bar">
 							<h3>Search Page</h3>
@@ -74,14 +69,16 @@
 			</section>
 
 			<section id="contact-2">
-				<h2>Contact</h2>
+				<div class="contact-info">
+				<h2><a id="contact">Contact</a></h2>
 					<p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
 					<p>Phone &#160; <b>+1 (111) 555-1234</b></p>
 					<p>Email &#160; <b>email@yoursite.com</b></p>
+				</div>
 				<hr>
 				<footer class="main-footer">
-						<p class="align-left">Student Name</p>
-						<p class="align-right">Back to the Top</p>
+					<p class="align-left"><a href="#top">Student Name</a></p>
+					<p class="align-right"> <a href="#top">Back to the Top</a></p>
 				</footer>
 			</section>
 	</div>
