footer navigation changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="content">
 		<section id="intro">
 			<header class="main-header">
-					<h1 class="site-logo"> <a id="home"> <a id="top">Student Name</a></a></h1>
+					<h1 class="site-logo"> <a id="home"> <a id="top">Grace Chew</a></a></h1>
 					<ul class="main-nav">
 							<li><a href="#home">Home</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
@@ -76,12 +76,21 @@
 					<p>Email &#160; <b>email@yoursite.com</b></p>
 				</div>
 				<hr>
-				<footer class="main-footer">
-					<p class="align-left"><a href="#top">Student Name</a></p>
-					<p class="align-right"> <a href="#top">Back to the Top</a></p>
+			
+				<footer class="contact">
+					<header class="main-footer">
+						<h3 class="site-logo"> <a id="home"> <a id="top">Grace Chew</a></a></h1>
+							<ul class="listfooter">
+									<li class="mobile-nav"><a href="#home">Back to Top</a></li>
+									<li class="desktop-nav"><a href="#home">Home</a></li>
+									<li class="desktop-nav"><a href="#portfolio">Portfolio</a></li>
+									<li class="desktop-nav"><a href="#contact">Contact</a></li>
+							</ul>
+					</header>
 				</footer>
 			</section>
 	</div>
 
 </body>
 </html>
+
