Final Adjustments to bottom navigation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="content">
 		<section id="intro">
 			<header class="main-header">
-					<h1 class="site-logo"> <a id="home"> <a id="top">Grace Chew</a></a></h1>
+					<h1 class="site-logo">Grace Chew</h1>
 					<ul class="main-nav">
 							<li><a href="#home">Home</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
@@ -67,7 +67,7 @@
 						</div>
 					</div>
 			</section>
-
+		<footer>
 			<section id="contact-2">
 				<div class="contact-info">
 				<h2><a id="contact">Contact</a></h2>
@@ -77,19 +77,19 @@
 				</div>
 				<hr>
 			
-				<footer class="contact">
-					<header class="main-footer">
-						<h3 class="site-logo"> <a id="home"> <a id="top">Grace Chew</a></a></h1>
-							<ul class="listfooter">
-									<li class="mobile-nav"><a href="#home">Back to Top</a></li>
-									<li class="desktop-nav"><a href="#home">Home</a></li>
-									<li class="desktop-nav"><a href="#portfolio">Portfolio</a></li>
-									<li class="desktop-nav"><a href="#contact">Contact</a></li>
-							</ul>
-					</header>
-				</footer>
+				<div class="main-footer">
+					<h3 class="site-logo"><a id="top">Grace Chew</a></h3>
+						<ul class="listfooter">
+								<li class="mobile-nav"><a href="#home">Back to Top</a></li>
+								<li class="desktop-nav"><a href="#home">Home</a></li>
+								<li class="desktop-nav"><a href="#portfolio">Portfolio</a></li>
+								<li class="desktop-nav"><a href="#contact">Contact</a></li>
+						</ul>
+					</div>
 			</section>
+		</footer>
 	</div>
+
 
 </body>
 </html>
