--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header class="main-header">
 					<h1 class="site-logo">Grace Chew</h1>
 					<ul class="main-nav">
-							<li><a href="#home">Home</a></li>
+							<li><a href="#">Home</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -80,8 +80,8 @@
 				<div class="main-footer">
 					<h4 class="site-logo"><a id="top">Grace Chew</a></h3>
 						<ul class="listfooter">
-								<li class="mobile-nav"><a href="#home">Back to Top</a></li>
-								<li class="desktop-nav"><a href="#home">Home</a></li>
+								<li class="mobile-nav"><a href="#">Back to Top</a></li>
+								<li class="desktop-nav"><a href="#">Home</a></li>
 								<li class="desktop-nav"><a href="#portfolio">Portfolio</a></li>
 								<li class="desktop-nav"><a href="#contact">Contact</a></li>
 						</ul>
